<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 netikalyan
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Library Management</string>
    <string name="tab_book">Books</string>
    <string name="tab_member">Members</string>
    <string name="tab_transaction">Transactions</string>
    <string name="btn_first">First</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_last">Last</string>
    <string name="btn_add">Add</string>
    <string name="btn_search">Search</string>
    <string name="btn_modify">Modify</string>
    <string name="btn_delete">Delete</string>
    <string name="book_id">ID</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_price">Price</string>
    <string name="book_available">Available</string>
    <string name="member_id">ID</string>
    <string name="member_name">Name</string>
    <string name="member_info">Other Info</string>
    <string name="transaction_id">ID</string>
    <string name="transaction_book_id">Book ID</string>
    <string name="transaction_member_id">Member ID</string>
    <string name="transaction_loan_date">Date of Loan</string>
    <string name="transaction_return_date">Date of Return</string>
</resources>
