<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView android:text="@string/book_id" />

            <TextView android:id="@+id/textBookID" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/book_title" />

            <TextView android:id="@+id/textBookTitle" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/book_author" />

            <TextView android:id="@+id/textBookAuthor" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/book_price" />

            <TextView android:id="@+id/textBookPrice" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/book_available" />

            <TextView android:id="@+id/textBookAvailable" />
        </TableRow>
    </TableLayout>
</LinearLayout>
