<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TableRow android:layout_marginVertical="4dp">

        <TextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/transaction_id" />

        <TextView android:id="@+id/textTransactionID" />
    </TableRow>


    <TableRow android:layout_marginVertical="4dp">

        <TextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/transaction_book_id" />

        <TextView android:id="@+id/textTransactionBookName" />
    </TableRow>

    <TableRow>

        <TextView android:layout_marginHorizontal="4dp" />

        <TextView android:id="@+id/textTransactionBookID" />
    </TableRow>

    <TableRow android:layout_marginVertical="4dp">

        <TextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/transaction_member_id" />

        <TextView android:id="@+id/textTransactionMemberName" />
    </TableRow>

    <TableRow>

        <TextView />

        <TextView android:id="@+id/textTransactionMemberID" />
    </TableRow>

    <TableRow android:layout_marginVertical="4dp">

        <TextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/transaction_loan_date" />

        <TextView android:id="@+id/textTransactionLoanDate" />
    </TableRow>

    <TableRow android:layout_marginVertical="4dp">

        <TextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/transaction_return_date" />

        <TextView android:id="@+id/textTransactionReturnDate" />
    </TableRow>
</TableLayout>
