<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView android:text="@string/member_id" />

            <TextView android:id="@+id/textMemberID" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/member_name" />

            <TextView android:id="@+id/textMemberName" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/member_info" />

            <TextView android:id="@+id/textMemberOtherInfo" />
        </TableRow>
    </TableLayout>
</LinearLayout>
