<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.TransactionFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/transaction_id" />

        <EditText
            android:id="@+id/editTransactionID"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/transaction_id"
            android:hint="@string/transaction_id"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/transaction_book_id" />

        <AutoCompleteTextView
            android:id="@+id/editTransactionBookName"
            android:layout_gravity="start|center_vertical"
            android:hint="@string/book_title" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin" />

        <TextView
            android:id="@+id/textTransactionBookID"
            android:layout_gravity="start|center_vertical" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/transaction_member_id" />

        <AutoCompleteTextView
            android:id="@+id/editTransactionMemberName"
            android:layout_gravity="start|center_vertical"
            android:hint="@string/member_name"
            android:inputType="textAutoComplete" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin" />

        <TextView
            android:id="@+id/textTransactionMemberID"
            android:layout_gravity="start|center_vertical" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/transaction_loan_date" />

        <EditText
            android:id="@+id/editTransactionLoanDate"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/transaction_loan_date"
            android:hint="@string/transaction_loan_date"
            android:inputType="date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/transaction_return_date" />

        <EditText
            android:id="@+id/editTransactionReturnDate"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/transaction_return_date"
            android:hint="@string/transaction_return_date"
            android:inputType="date" />
    </TableRow>
</TableLayout>
