<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.BookFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/book_id" />

            <EditText
                android:id="@+id/editBookID"
                android:layout_weight="1"
                android:autofillHints="@string/book_id"
                android:hint="@string/book_id"
                android:inputType="number" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/book_title" />

            <EditText
                android:id="@+id/editBookTitle"
                android:layout_weight="1"
                android:autofillHints="@string/book_title"
                android:hint="@string/book_title"
                android:inputType="text" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/book_author" />

            <EditText
                android:id="@+id/editBookAuthor"
                android:layout_weight="1"
                android:autofillHints="@string/book_author"
                android:hint="@string/book_author"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/book_price" />

            <EditText
                android:id="@+id/editBookPrice"
                android:layout_weight="1"
                android:autofillHints="@string/book_price"
                android:hint="@string/book_price"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/book_available" />

            <EditText
                android:id="@+id/editBookAvailable"
                android:layout_weight="1"
                android:autofillHints="@string/book_available"
                android:hint="@string/book_available"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
