<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.BookFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/book_id" />

        <EditText
            android:id="@+id/editBookID"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/book_id"
            android:background="@android:color/transparent"
            android:hint="@string/book_id"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/book_title" />

        <EditText
            android:id="@+id/editBookTitle"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/book_title"
            android:background="@android:color/transparent"
            android:hint="@string/book_title"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/book_author" />

        <EditText
            android:id="@+id/editBookAuthor"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/book_author"
            android:background="@android:color/transparent"
            android:hint="@string/book_author"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/book_price" />

        <EditText
            android:id="@+id/editBookPrice"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/book_price"
            android:background="@android:color/transparent"
            android:hint="@string/book_price"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/book_available" />

        <EditText
            android:id="@+id/editBookAvailable"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/book_available"
            android:background="@android:color/transparent"
            android:hint="@string/book_available"
            android:inputType="number" />
    </TableRow>
</TableLayout>
