<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MemberFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/member_id" />

            <EditText
                android:id="@+id/editMemberID"
                android:inputType="number"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/member_name" />

            <EditText
                android:id="@+id/editMemberName"
                android:inputType="textPersonName"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_marginVertical="8dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/member_info" />

            <EditText
                android:id="@+id/editMemberInfo"
                android:inputType="phone"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
