<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 netikalyan
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_marginVertical="16dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/transaction_id" />

            <EditText
                android:id="@+id/editTransactionID"
                android:inputType="number" />
        </TableRow>

        <TableRow android:layout_marginVertical="16dp">

            <TextView android:text="@string/transaction_book_id" />

            <EditText
                android:id="@+id/editTransactionBookName"
                android:inputType="textAutoComplete" />

            <TextView
                android:id="@+id/textTransactionBookID"
                android:inputType="number" />

        </TableRow>

        <TableRow android:layout_marginVertical="16dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/transaction_member_id" />

            <EditText
                android:id="@+id/editTransactionMemberName"
                android:inputType="textAutoComplete" />

            <TextView
                android:id="@+id/textTransactionMemberID"
                android:inputType="number" />

        </TableRow>

        <TableRow android:layout_marginVertical="16dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/transaction_loan_date" />

            <EditText
                android:id="@+id/editTransactionLoanDate"
                android:inputType="date" />
        </TableRow>

        <TableRow android:layout_marginVertical="16dp">

            <TextView
                android:layout_marginEnd="16dp"
                android:text="@string/transaction_return_date" />

            <EditText
                android:id="@+id/editTransactionReturnDate"
                android:inputType="date" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
