<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MemberFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/member_id" />

        <EditText
            android:id="@+id/editMemberID"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/member_id"
            android:background="@android:color/transparent"
            android:hint="@string/member_id"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/member_name" />

        <EditText
            android:id="@+id/editMemberName"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/member_name"
            android:background="@android:color/transparent"
            android:hint="@string/member_name"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="@dimen/table_row_margin">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/member_info" />

        <EditText
            android:id="@+id/editMemberInfo"
            android:layout_gravity="start|center_vertical"
            android:autofillHints="@string/member_info"
            android:background="@android:color/transparent"
            android:hint="@string/member_info"
            android:inputType="phone" />
    </TableRow>

</TableLayout>
